# distillcore

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  changelog-v0.4-to-v0.7.md  code-review-2026-04-27.md  plan-remaining-gaps.md
src/distillcore/: __init__.py  __main__.py  chunking.py  config.py  models.py  server.py
src/distillcore/embedding/: __init__.py  cohere.py  local.py  ollama.py  openai.py
src/distillcore/extractors/: __init__.py  base.py  docx.py  html.py  pdf.py  text.py
src/distillcore/llm/: async_client.py  client.py  json_repair.py  ocr.py
src/distillcore/pipeline/: _shared.py  async_classification.py  async_enrichment.py  async_orchestrator.py  async_structuring.py  chunking.py  classification.py  enrichment.py  orchestrator.py  structuring.py
src/distillcore/presets/: __init__.py  generic.py  legal.py
src/distillcore/storage/: __init__.py  database.py
src/distillcore/validation/: checks.py  coverage.py
tests/: conftest.py  test_async_pipeline.py  test_batch.py  test_chunk_api.py  test_chunking.py  test_classification.py  test_config.py  test_embedding.py  test_enrichment.py  test_extractors.py  test_json_repair.py  test_models.py  test_pipeline.py  test_presets.py  test_server.py  test_shared.py  test_storage.py  test_structuring.py  test_validation.py
